Fix z-index for signature svg

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ a{
 }
 .sig{
     position: absolute;
+    z-index: 20;
 }
 #title {
     font-size: 40px;
